Somewhat of a dump push
Classes and stats work, however, assigning skill points and classes is only possible with a command (cheats).
Buffs are unbalanced and will be changed.

Will add daggers and the like for Assassin class.
Will add gems for upgrading gear.

--- a/build.gradle
+++ b/build.gradle
@@ -64,9 +64,10 @@ if (!file(gameDirectory + "/Necesse.jar").exists()) {
 dependencies {
     implementation files(gameDirectory + "/Necesse.jar")
     implementation fileTree(gameDirectory + "/lib/")
-    implementation fileTree("./mods/") // Add all mods located in local mods folder
+    implementation fileTree("./mods/")
+	implementation 'org.jetbrains:annotations:20.1.0'// Add all mods located in local mods folder
 
-    compileOnly "com.jubiman:customplayerlib:1.4"
+    compileOnly "com.jubiman:customplayerlib:1.9"
 }
 
 
