Create a working gemstone system

--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ plugins {
 project.ext.modID = "com.jubiman.scourgemod" // The unique id of your mod. Must be all lowercase and cannot use special characters.
 project.ext.modName = "ScourgeMod" // The display name of your mod.
 project.ext.modVersion = "1.0" // Your current builds version. Must follow the xx.xx... format.
-project.ext.gameVersion = "0.21.28" // The target game version.
+project.ext.gameVersion = "0.22.0" // The target game version.
 project.ext.modDescription = "A mod expanding upon the normal Necesse gameplay, adding bosses and more content" // Short description of what your mod is.
 project.ext.author = "Jubiman" // Your name
 
@@ -24,13 +24,20 @@ project.ext.clientside = false
  * Dependencies define the default load order of mods
  * Uncomment and configure these if your mod has dependencies
  */
-project.ext.modDependencies = ["com.jubiman.customplayerlib"]
+project.ext.modDependencies = ["com.jubiman.customdatalib"]
 //project.ext.modDependencies = ["other.modid1", "other.modid2"]
 //project.ext.modOptionalDependencies = ["optional.modid1", "optional.modid2"]
 
 // The path to the games install directory
-def gameDirectory = "E:/SteamGames/steamapps/common/Necesse"
-
+def gameDirectory
+import org.apache.tools.ant.taskdefs.condition.Os
+if (Os.isFamily(Os.FAMILY_WINDOWS)) {
+    gameDirectory = "E:/SteamGames/steamapps/common/Necesse"
+} else if (Os.isFamily(Os.FAMILY_UNIX)) {
+    gameDirectory = "/home/jubiman/.local/share/Steam/steamapps/common/Necesse"
+} else {
+    throw new Exception("Unsupported OS")
+}
 // =================================================
 // ========== DO NOT EDIT BELOW THIS LINE ==========
 // =================================================
@@ -48,6 +55,13 @@ repositories {
     mavenCentral()
     maven {
         url "https://s01.oss.sonatype.org/content/repositories/releases/"
+    }
+    maven {
+        url "https://maven.pkg.github.com/jubiman/CustomDataLib/"
+        credentials {
+            username = githubUsername
+            password = githubToken
+        }
     }
 }
 
@@ -67,7 +81,7 @@ dependencies {
     implementation fileTree("./mods/")
 	implementation 'org.jetbrains:annotations:23.1.0' // Add all mods located in local mods folder
 
-    compileOnly "com.jubiman:customplayerlib:1.10"
+    compileOnly "com.jubiman:customdatalib:1.2"
 }
 
 
